Favorites and poi profiles merged: Add favorite points directly to a poi profile UI reworked: - Favorites fragment removed - New router tab layout - Search moved into poi tab - Main menu reorganized - New dialog for last visited points German localization New image resources Many smaller bug fixes